fixed the alignment of items on agency list

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_agency_overlay.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_agency_overlay.scss
@@ -32,7 +32,9 @@ $grid-size: 40px;
 
   .agency-item {
     margin-bottom: 10px;
+    -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
+    break-inside: avoid;
 
     &.selected a {
       background-color: $white;
